--- a/src/main/webapp/hello_page.html
+++ b/src/main/webapp/hello_page.html
@@ -7,16 +7,14 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
 </head>
 <body ng-app="springDemo" >
-<div class="container petro" ng-controller="AppCtrl" style="margin-right: 30%">
+<div class="petro" ng-controller="AppCtrl" style="margin-left: 5%; margin-right: 5%">
   Пошук:  <input type ="text" ng-model="query">
     <div class="panel-body">
     <div class="row">
-        <div class="col-md-12">
             <div class="panel panel-default">
-                <div class="panel-heading"></div>
                 <div class="panel-body">
-                    <table class="table table-striped table table-hover table-bordered">
-                        <thead style="background-color: #bce8f1;">
+                    <table class="table table-striped table table-hover table-bordered ">
+                        <thead style="background-color: #a8e3f1;">
                         <tr>
                             <th><a href="" ng-click="sort('tittle')">Тема</a></th>
                             <th><a href="" ng-click="sort('author')">Автор</a></th>
@@ -28,7 +26,7 @@
                         </tr>
                         </thead>
                         <tbody>
-                        <tr ng-repeat="item in websites | filter:query | orderBy:sortField:reverse">
+                        <tr ng-repeat="item in websites | filter:query | orderBy:sortField:revers">
                             <th><a href ={{item.link}} />{{item.tittle}}</a></th>
                             <th>{{item.author}}</th>
                             <th>{{item.pages}}</th>
@@ -39,7 +37,6 @@
                         </tr>
                         </tbody>
                     </table>
-                </div>
             </div>
         </div>
     </div>
